2016-06-28  Dean Jackson  <dino@apple.com>

        Add a more interactive version of the demo.

        * blog-files/color-gamut/comparison.html: Added.

2016-06-28  Jon Davis  <jond@apple.com>

        Fixed tile height for mobile phone-sized viewports.
        https://bugs.webkit.org/show_bug.cgi?id=159228

        Reviewed by Timothy Hatcher.

        Prevents cutoff text for featured tiles and prevents overlapping text and controls on the Twitter tile for phone-sized viewports.

        * wp-content/themes/webkit/style.css:
        (.twitter-tile.text-only .tile-content):
        (.tile):

2016-06-28  Jon Davis  <jond@apple.com>

        Fixed Open Graph meta data and image entries.
        https://bugs.webkit.org/show_bug.cgi?id=159167.

        Reviewed by Timothy Hatcher.

        This patch addresses Open Graph meta data issues:

        - Added a high-resolution PNG of the WebKit logo because Facebook doesn't support SVG images
        - Uses the first image of a page or post if not featured image is set
        - Article date/time information should not be given for the homepage
        - Added Facebook admins as per the Facebook Open Graph debugger

        * wp-content/plugins/social-meta.php:
        * wp-content/themes/webkit/images/ogimage.png: Added.

2016-06-27  Dean Jackson  <dino@apple.com>

        Updated content for the color blog post.

        * blog-files/color-gamut/Iceland-P3.jpg:
        * blog-files/color-gamut/Iceland-oog.jpg:
        * blog-files/color-gamut/Iceland-sRGB.jpg:
        * blog-files/color-gamut/Italy-P3.jpg:
        * blog-files/color-gamut/Italy-sRGB.jpg:
        * blog-files/color-gamut/Sunset-P3.jpg:
        * blog-files/color-gamut/Sunset-sRGB.jpg:
        * blog-files/color-gamut/YellowFlower-P3.jpg:
        * blog-files/color-gamut/YellowFlower-oog.jpg:
        * blog-files/color-gamut/YellowFlower-sRGB.jpg:
        * blog-files/color-gamut/index.html:

2016-06-27  Jon Davis  <jond@apple.com>
